[gd_scene load_steps=7 format=3 uid="uid://dw03mocb8lkwb"]

[ext_resource type="Texture2D" uid="uid://bctdju5upjnk7" path="res://assets/weapons/tile_0130.png" id="1_6q3wq"]
[ext_resource type="Script" uid="uid://bekivlbfi7dbp" path="res://scripts/magic_wand.gd" id="1_w20rb"]

[sub_resource type="Animation" id="Animation_tvs7n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.0872665]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_qblbq"]
resource_name = "return"
length = 0.65
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.65),
"transitions": PackedFloat32Array(-2, -2, 0.5),
"update": 0,
"values": [4.45059, 4.45059, -0.0872665]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.65),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(0.8, 0.95), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_w20rb"]
resource_name = "slash"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, -2),
"update": 0,
"values": [-0.0872665, 4.45059]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 0.95)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_shoot"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qblbq"]
_data = {
&"RESET": SubResource("Animation_tvs7n"),
&"return": SubResource("Animation_qblbq"),
&"slash": SubResource("Animation_w20rb")
}

[node name="MagicWand" type="Node2D"]
script = ExtResource("1_w20rb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
rotation = -0.0872665
texture = ExtResource("1_6q3wq")
offset = Vector2(-6, -3)

[node name="ShootPos" type="Marker2D" parent="Sprite2D"]
position = Vector2(0, -11.605)

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="MagicWandAnim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qblbq")
}

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="animation_finished" from="MagicWandAnim" to="." method="_on_animation_player_animation_finished"]
